--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="text_intro">All your shopping in one App</string>
     <string name="text_intro_2">Sell your devices the smarter, faster way for immediate cash and a cleaner conscience. Sell your devices the smarter, faster way for immediate cash and a cleaner conscience.</string>
     <string name="text_welcome">Welcome back! Don\'t have an account?</string>
+
+    <string-array name="CVV">
+        <item>Master Card</item>
+        <item>Visa</item>
+    </string-array>
+
 </resources>
